# CodeCache

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  devops-release-engineer.md  performance-bench-engineer.md  principal-engineering-lead.md  principal-engineering-manager.md  principal-test-engineering-lead.md  rust-treesitter-specialist.md
.claude/briefs/: BRIEF-M0-scaffolding.md  BRIEF-M5-indexer.md  BRIEF-M6.3-token-budget-packing.md  BRIEF-M7-formatter-cli.md  BRIEF-M8-mcp-server.md  BRIEF-M9-typescript-go.md  BRIEF-R2.4-ablation-reporter.md  BRIEF-R2.5-external-corpus-loader.md  BRIEF-bugfix-file-filter-glob.md  BRIEF-discovery-default-ignores.md  CLAUDE.md  TEMPLATE.md
.claude/hooks/: check-on-stop.ps1  fmt-on-edit.ps1  prime-context.ps1
.claude/skills/bench/: SKILL.md
.claude/skills/new-module/: SKILL.md
.claude/skills/standup/: SKILL.md
.claude/skills/tdd-cycle/: SKILL.md
.github/: CLAUDE.md
.github/workflows/: ci.yml
benches/: .gitkeep  CLAUDE.md
docs/: CLAUDE.md  ENGINEERING_PLAN.md  ROADMAP.md  TEST_STRATEGY.md  TODO.md  project_plan.md
docs/plans/: M0-scaffolding.md  M1-config-storage.md  M10-benchmarks-release.md  M2-hasher.md  M3-parser-python.md  M4-chunker.md  M5-indexer.md  M6-retriever.md  M7-formatter-cli.md  M8-mcp-server.md  M9-typescript-go.md  README.md
research/: CLAUDE.md
research/r1_harness/: .gitignore  README.md  fetch_contextbench.py  requirements.txt  run_report.py  run_sweep.py  validate_offline.py
research/r1_harness/r1harness/: ablation_report.py  bash_env.py  contextbench.py  extract.py  report.py  runner.py  sweep.py
research/r1_harness/tests/: test_ablation_report.py  test_codecache_tool.py  test_contextbench.py  test_extract.py  test_runner_scoring.py  test_sweep.py
src/: CLAUDE.md  lib.rs  main.rs
src/chunker/: CLAUDE.md  mod.rs
src/cli/: CLAUDE.md  mod.rs  query.rs
src/config/: CLAUDE.md  mod.rs
src/formatter/: CLAUDE.md  json.rs  mod.rs  text.rs  toon.rs
src/hasher/: CLAUDE.md  mod.rs
src/indexer/: CLAUDE.md  discovery.rs  mod.rs  pipeline.rs
src/mcp_server/: CLAUDE.md  handlers.rs  mod.rs  tools.rs
src/parser/: CLAUDE.md  mod.rs
src/retriever/: CLAUDE.md  mod.rs
src/storage/: CLAUDE.md  mod.rs  queries.rs
src/types/: CLAUDE.md  mod.rs
tests/: CLAUDE.md  e2e_cli.rs  e2e_multilang.rs  formatter_tests.rs  indexer_tests.rs  mcp_tests.rs  retriever_tests.rs  smoke_test.rs  storage_tests.rs
tests/fixtures/golden/: query_basic.json  query_basic.toon  query_basic.txt  query_empty.json  query_empty.txt
