[package]
name = "codecache-rs"
version = "0.1.0"
edition = "2021"
description = "Local-first, AST-driven code-context retrieval engine for terminal AI workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdvancedUno/codecache"
readme = "README.md"
keywords = ["ast", "tree-sitter", "retrieval", "code-search", "mcp"]
categories = ["command-line-utilities", "development-tools"]
# Published-crate allowlist. crates.io tarballs are PERMANENT and PUBLIC, so ship only product code
# + license/readme/changelog. This deliberately EXCLUDES research/ (held until the paper), .claude/
# (agent tooling), docs/, every CLAUDE.md, and project_overview.md — none of them reach crates.io.
# An allowlist (not a denylist) so nothing added later auto-leaks. Verified via `cargo package --list`.
include = [
    # Leading "/" ANCHORS each pattern to the package root. Without it, cargo's gitignore-style
    # globs match a bare filename at ANY depth — e.g. "README.md" would slurp every nested README
    # under research/ (incl. gitignored cloned repos). Anchoring keeps the crate to product code only.
    "/src/**/*.rs",
    "/src/**/*.scm",
    "/benches/**/*.rs",
    "/examples/**/*.rs",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/rust-toolchain.toml",
]
rust-version = "1.85"

[lib]
name = "codecache"
path = "src/lib.rs"

[[bin]]
name = "codecache"
path = "src/main.rs"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "hashing_bench"
harness = false

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Storage. `bundled` compiles the SQLite amalgamation from source (no system lib) with FTS5
# enabled by default — rusqlite 0.32 has no separate `fts5` feature (it was removed; FTS5 comes
# with the bundled build). See docs/project_plan.md §10.3 and ROADMAP Decision Log D9.
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system
ignore = "0.4"
walkdir = "2.5"
# Glob matcher for `--file-filter` (D33). This is the same matcher crate already inside the
# present `ignore` stack; pinned to the version `ignore` resolves so the tree stays lean.
globset = "0.4.18"

# Utilities
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
# Property-based testing. Used from M4 (chunker non-overlap invariant) onward; declared at M0 to
# keep Cargo.toml churn low. Manager-approved deviation (docs/plans/M0-scaffolding.md, ENGINEERING_PLAN §6).
proptest = "1.5"
# CLI integration testing (M7.2/M7.4). Drives the built binary + asserts stdout/stderr/exit codes.
# Dev-only (ships in no release artifact); manager-approved D17 (docs/ROADMAP.md). Scoped to
# tests/cli_tests.rs + tests/e2e_cli.rs.
assert_cmd = "2"
predicates = "3"
